Implementated google sign in and health kit authorization.

--- a/OpenMind/OpenMind/Info.plist
+++ b/OpenMind/OpenMind/Info.plist
@@ -60,6 +60,10 @@
 			<false/>
 		</dict>
 	</dict>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>Updates Health Data</string>
+	<key>NSHealthShareUsageDescription</key>
+	<string>Uses Health Data</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
