--- a/OpenMind/GoogleService-Info.plist
+++ b/OpenMind/GoogleService-Info.plist
@@ -3,15 +3,15 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>481119782428-pr87cjd7eh71pbl60afv004okkcf83rn.apps.googleusercontent.com</string>
+	<string>244090642066-03iqlpq54om9u4da4hu6gfkbno10pqlb.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.481119782428-pr87cjd7eh71pbl60afv004okkcf83rn</string>
+	<string>com.googleusercontent.apps.244090642066-03iqlpq54om9u4da4hu6gfkbno10pqlb</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.example.OpenMind</string>
 	<key>PROJECT_ID</key>
-	<string>firebase-openmind</string>
+	<string>openmind-27886</string>
 	<key>IS_ADS_ENABLED</key>
 	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -23,6 +23,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:481119782428:ios:50941e84d2aea276</string>
+	<string>1:244090642066:ios:50941e84d2aea276</string>
 </dict>
 </plist>
